--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip pip install -e '.[linting]'
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install -e '.[linting]'
     - name: Lint with ruff
       run: python -m ruff .
     - name: Lint with pylint
